// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot fetch should match mocked data 1`] = `
<div>
  <LocationsList
    closeModal={[Function]}
    detailed={true}
    onUserConfirmDelete={[Function]}
    showDeleteModal={undefined}
    showEditModal={[Function]}
    userLocations={
      Array [
        "data1",
        "data2",
      ]
    }
  />
  <Form(Component)
    closeModal={[Function]}
    onUpdate={[Function]}
    visible={false}
  />
</div>
`;

exports[`Snapshot should contain the closeModal 1`] = `
<div>
  <LocationsList
    closeModal={[Function]}
    detailed={true}
    onUserConfirmDelete={[Function]}
    showDeleteModal={undefined}
    showEditModal={[Function]}
    userLocations={Array []}
  />
  <EditLocationModal
    closeModal={[Function]}
    location={undefined}
    onUpdate={[Function]}
    visible={false}
  />
</div>
`;

exports[`Snapshot should contain the showEditModal 1`] = `
<div>
  <LocationsList
    closeModal={[Function]}
    detailed={true}
    onUserConfirmDelete={[Function]}
    showDeleteModal={undefined}
    showEditModal={[Function]}
    userLocations={Array []}
  />
  <EditLocationModal
    closeModal={[Function]}
    location={undefined}
    onUpdate={[Function]}
    visible={true}
  />
</div>
`;
